--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">task1</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">dashboard</string>
 </resources>
